Add MotherDuck support and Render deployment config
- Update DatabaseService to support MotherDuck cloud connections
- Add render.yaml for Render.com deployment
- Add landuse package as git dependency
- Update CORS settings for Netlify frontend

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ dependencies = [
     "pydantic-settings>=2.6.0",
     "python-dotenv>=1.0.0",
     "duckdb>=1.0.0",
+    # Landuse package for AI agent (from git)
+    "rpa-landuse-analytics @ git+https://github.com/mihiarc/rpa-landuse.git",
 ]
 
 [project.optional-dependencies]
