--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ dependencies = [
     # Authentication
     "bcrypt>=4.0.0",
     "PyJWT>=2.8.0",
-    # Landuse package for AI agent (from git)
-    "rpa-landuse-analytics @ git+https://github.com/mihiarc/rpa-landuse.git",
+    # Landuse package for AI agent (from git - pinned to latest)
+    "rpa-landuse-analytics @ git+https://github.com/mihiarc/rpa-landuse.git@33c7e78ece5ea88e190d483eaa0d08b059f196f8",
 ]
 
 [project.optional-dependencies]
