--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,8 @@ dependencies = [
     # Authentication
     "bcrypt>=4.0.0",
     "PyJWT>=2.8.0",
-    # Landuse package for AI agent (from git - AGGRESSIVE STATELESS REDESIGN)
-    "rpa-landuse-analytics @ git+https://github.com/mihiarc/rpa-landuse.git@6b34ba8",
+    # Landuse package for AI agent (from git - schema filter for shared MotherDuck)
+    "rpa-landuse-analytics @ git+https://github.com/mihiarc/rpa-landuse.git@3510067",
 ]
 
 [project.optional-dependencies]
