Add security hardening: pre-commit hooks, secret scanning, and CORS fix
- Add pre-commit config with detect-secrets and gitleaks
- Create secrets baseline for scanning
- Fix CORS to use explicit domains instead of wildcard
- Update env var from OPENAI_API_KEY to ANTHROPIC_API_KEY

--- a/render.yaml
+++ b/render.yaml
@@ -10,11 +10,11 @@ services:
     envVars:
       - key: PYTHON_VERSION
         value: "3.11"
-      - key: OPENAI_API_KEY
+      - key: ANTHROPIC_API_KEY
         sync: false
       - key: motherduck_token
         sync: false
       - key: LANDUSE_DATABASE__PATH
         value: md:landuse_analytics
       - key: CORS_ORIGINS
-        value: '["https://*.netlify.app", "http://localhost:3000"]'
+        value: '["https://rpa-landuse-frontend.netlify.app", "https://rpalanduse.org", "https://www.rpalanduse.org", "http://localhost:3000"]'
